# SO2test

./: CMakeLists.txt  Makefile  SO2  main.c  map.txt  mapEmpty.txt  sciezka
client/constants/: constants.c  constants.h  mapGameplay.txt
client/player/: player.c  player.h
client/server/: server.c  server.h
